# OOP_4

./: .gitignore  pyproject.toml
XML/: file.xml
json/: fe.json  fi.json  fi_invalid.json
program/: ind_1.py  prim.py  task_1.py  task_2.py
src/: ind_1.py  prim.py  task_1.py  task_2.py
tests/: test_ind_1.py  test_prim.py  test_task_1.py  test_task_2.py
